--- a/components/testimony/Testimony.module.css
+++ b/components/testimony/Testimony.module.css
@@ -75,7 +75,7 @@
 
 @media screen and (max-width: 1000px) {
     .testimony {
-        margin-right: 0;
+        margin-right: 3rem;
     }
 }
 
@@ -93,7 +93,28 @@
     }
 }
 
-@media screen and (max-width: 624px) {
+@media screen and (max-width: 640px) {
+    .testimony {
+        align-items: start;
+    }
+
+    .imageContainer  {
+        width: 150px;
+        height: 150px;
+}
+
+    .imageContainer .image {
+        border-radius: 50%;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+    }
+
+    .imageContainer::after {
+        display: none;
+}
+
     .description {
         font-size: 1rem;
     }
@@ -105,4 +126,5 @@
     .role {
         font-size: 1rem;
     }
+    
 }
